old changes, finally committing

--- a/docs/source/usage_demos/resampling_methods.ipynb
+++ b/docs/source/usage_demos/resampling_methods.ipynb
@@ -196,8 +196,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Bootstrap 95% confidence: T[x] {}, E[T(x*)] {}, CI T[x]: {}'.format(*bs.estimate(np.mean, ci=0.95)))\n",
-    "print('Bootstrap 95% confidence: T[x] {}, E[T(x*)] {}, SE T[x]: {}'.format(*bs.estimate(np.mean, ci='se')))"
+    "# Calc with CI\n",
+    "sample_mean, bootstrap_mean, ci = bs.estimate(np.mean, ci=0.95)\n",
+    "print('Bootstrap 95% confidence: T[x] {}, E[T(x*)] {}, CI T[x]: {}'.format(sample_mean, bootstrap_mean, ci))\n",
+    "\n",
+    "# Calc with SE\n",
+    "sample_mean, bootstrap_mean, se = bs.estimate(np.mean, ci='se')\n",
+    "print('Bootstrap 95% confidence: T[x] {}, E[T(x*)] {}, SE T[x]: {}'.format(sample_mean, bootstrap_mean, se))"
    ]
   },
   {
@@ -323,7 +328,8 @@
    "outputs": [],
    "source": [
     "print('Jackknife SE:', jn.variance(svar) ** 0.5)\n",
-    "print('Jackknife est and SE:', *jn.estimate(svar, se=True, correct_bias=True))"
+    "jn_mean, jn_se = jn.estimate(svar, se=True, correct_bias=True)\n",
+    "print('Jackknife est and SE:', jn_mean, jn_se)"
    ]
   },
   {
@@ -441,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get nonparametric confidence intervals, we can bootstrap the OLS fit and check the quantiles of the resulting optimizations. First, define an estimator function that returns optimization parameters:"
+    "To get nonparametric confidence intervals, we can bootstrap the OLS fit and check the quantiles of the resulting optimizations. First, define an estimator function that returns optimization parameters. The estimator [resamples *residuals*](https://en.wikipedia.org/wiki/Bootstrapping_(statistics)#Resampling_residuals) from the original OLS fit (**note: the resampled array(s) need to be first argument(s) of an estimator function**). The resampled residuals are added to the OLS mean response to simulate a new dataset."
    ]
   },
   {
@@ -450,8 +456,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_ols(x, y, axis=None):\n",
-    "    fm = sm.OLS(y, np.c_[np.ones_like(x), x]).fit()\n",
+    "def bootstrapped_residual_ols(e, x, ym):\n",
+    "    \"\"\"\n",
+    "    Estimate OLS with bootstrapped residuals.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    e: ndarray\n",
+    "        Sample of residuals\n",
+    "    x: ndarray\n",
+    "        Independent variable\n",
+    "    ym: ndarray\n",
+    "        Predicted mean response (from full sample)\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    params: ndarray\n",
+    "        OLS coefficients\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    fm = sm.OLS(ym + e, np.c_[np.ones_like(x), x]).fit()\n",
     "    return fm.params"
    ]
   },
@@ -459,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then create a bootstrapper that resamples BOTH $x$ and $y$ with *the same permutations*. (Another note here: the ``Bootstrap`` object pre-computes the sampling permutations so that work on each sample can be mapped out to subprocesses. Use ``n_jobs=None``, or ``n_jobs=X`` to take advantage of multiple parallel jobs.)"
+    "Then create a bootstrapper that resamples the OLS residuals. Use the ``e_args`` parameter to specify \"extra\" arguments: the independent variables and the fitted means."
    ]
   },
   {
@@ -468,8 +492,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bootstrapper = resampling.Bootstrap([x, y], 1000)\n",
-    "fits = np.array([p for p in bootstrapper.sample(estimator=compute_ols)])"
+    "# OLS mean values\n",
+    "ym = ols_fm.fittedvalues\n",
+    "# OLS residuals\n",
+    "err = ols_fm.resid\n",
+    "\n",
+    "bootstrapper = resampling.Bootstrap(err, 1000)\n",
+    "fits = np.array([p for p in bootstrapper.sample(estimator=bootstrapped_residual_ols, e_args=(x, ym))])"
    ]
   },
   {
@@ -640,7 +669,7 @@
    "source": [
     "## Getting resampled data\n",
     "\n",
-    "The Bootstrap/Jackknife objects can also return the resampled data when estimator is left blank. This is **not** generally accelerated with multiple jobs."
+    "The Bootstrap/Jackknife objects can also return the resampled data when estimator is left blank. This is **not** generally accelerated with multiple jobs (you will get a warning if n_jobs > 1)."
    ]
   },
   {
