--- a/docs/source/usage_demos/DPSS-spectral-concentration.ipynb
+++ b/docs/source/usage_demos/DPSS-spectral-concentration.ipynb
@@ -105,7 +105,7 @@
     "                    extent=extent, \n",
     "                    norm=b_norm, \n",
     "                    clim=(0.9, 1 - (1 - max(bounds)) / 10),\n",
-    "                    cmap=cm_clip)\n",
+    "                    cmap=cm_clip, origin='lower')\n",
     "    ax.axis('auto')\n",
     "    for k in range(0, 13, 2):\n",
     "        ax.plot(nw_range, 2 * nw_range - k, lw=3, color=diag_colors[k], label='2NW - {}'.format(k))\n",
